fix(about): align titles on mobile (#24)
- Fixed misaligned titles on mobile devices

Fixes #24

--- a/pages/3-about-me/about-me.css
+++ b/pages/3-about-me/about-me.css
@@ -274,7 +274,7 @@
     grid-row: 1 / 2;
     text-align: left;
     width: 30em;
-    margin: 5em 3em 0 0;
+    margin: -2em 3em 0 0;
     height: 40em;
   }
 
